WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40625
Fix compilation when filters are disabled
https://bugs.webkit.org/show_bug.cgi?id=40625
Summary
Fix compilation when filters are disabled
Lucas De Marchi
Reported
2010-06-15 08:29:53 PDT
Fix compilation when filters are disabled
Attachments
Patch
(1.31 KB, patch)
2010-06-15 08:30 PDT
,
Lucas De Marchi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Lucas De Marchi
Comment 1
2010-06-15 08:30:57 PDT
Created
attachment 58781
[details]
Patch
Lucas De Marchi
Comment 2
2010-06-15 08:37:33 PDT
Adding people in CC responsible for
r60689
. The error was: WebCore/rendering/SVGRenderSupport.cpp: In static member function ‘static bool WebCore::SVGRenderBase::prepareToRenderSVGContent(WebCore::RenderObject*, WebCore::RenderObject::PaintInfo&, const WebCore::FloatRect&, WebCore::RenderSVGResourceFilter*&)’: WebCore/rendering/SVGRenderSupport.cpp:89:5: error: ‘rootFilter’ was not declared in this scope
WebKit Commit Bot
Comment 3
2010-06-18 03:41:41 PDT
Comment on
attachment 58781
[details]
Patch Clearing flags on attachment: 58781 Committed
r61392
: <
http://trac.webkit.org/changeset/61392
>
WebKit Commit Bot
Comment 4
2010-06-18 03:41:47 PDT
All reviewed patches have been landed. Closing bug.
Dirk Schulze
Comment 5
2010-06-18 04:02:10 PDT
***
Bug 40822
has been marked as a duplicate of this bug. ***
Lucas De Marchi
Comment 6
2011-06-09 20:49:21 PDT
Comment on
attachment 58781
[details]
Patch Mark patch as obsolete
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug