2010-06-18  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by David Levin.

        Fix compilation when filters are disabled. Revision r60689
        changed the signature of SVGRenderBase::prepareToRenderSVGContent()
        but didn't change the unsused parameters when filters are disabled.
        https://bugs.webkit.org/show_bug.cgi?id=40625

        No new tests. Compilation fix.

        * rendering/SVGRenderSupport.cpp:
        (WebCore::SVGRenderBase::prepareToRenderSVGContent):

git-svn-id: svn://svn.chromium.org/blink/trunk@61392 bbb929c8-8fbe-4397-9dbb-9b2b20218538