third_party/WebKit/WebCore/rendering/SVGRenderSupport.cpp
@@ -87,7 +87,6 @@ bool SVGRenderBase::prepareToRenderSVGContent(RenderObject* object, RenderObject
 {
 #if !ENABLE(FILTERS)
     UNUSED_PARAM(filter);
-    UNUSED_PARAM(rootFilter);
 #endif
 
     ASSERT(object);
